--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,10 @@
 @import "../../styles/mixins";
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,25 +13,21 @@
   background-color: $headerBackgroundColor;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   color: $textColor;
+
+  @include tablet {
+    padding-left: 26px;
+    padding-right: 26px;
+  }
+
+  @include desktop {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
 }
 
 .logo {
-  height: 40px;
-}
-
-.button {
-  background-color: $form-button-color;
-  color: $default-button-color;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 16px;
-  font-size: 16px;
-  cursor: pointer;
-
-  &:hover {
-    background-color: $form-button-color-hover;
-    color: $default-button-color;
-  }
+  height: 60px;
+  width: 60px;
 }
 
 .balanceInfo {
