--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -2,10 +2,28 @@
 @import "../../styles/mixins";
 
 .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include displayCenterVertical;
   border-color: $input-border-color;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin: auto;
+}
+
+.fieldset {
+  @include displayCenterVertical;
+
+  border-radius: 8px;
+  border-color: $input-border-color;
+  padding: 18px;
+  margin: auto;
+
+  @include tablet {
+    padding: 20px;
+  }
+
+  @include desktop {
+    padding: 20px;
+  }
 }
 
 .label {
@@ -18,4 +36,12 @@
   border: 1px solid $input-border-color;
   border-radius: 4px;
   font-size: 16px;
+
+  @include tablet {
+    width: 300px;
+  }
+
+  @include desktop {
+    width: 400px;
+  }
 }
